# medium-agent-factory

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODEX_HANDOFF.md  LICENSE  README.md  SESSION_LOG.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py  prompt_loader.py
backend/app/agents/: base.py  close_optimizer.py  content_generator.py  exemplar_store.py  fact_checker.py  formatter.py  image_description_enricher.py  (+20 more)
backend/evals/: conftest.py  langsmith_eval.py  test_quality_analyzer.py
backend/prompts/: claim_extractor_system.txt  close_optimizer_human.txt  close_optimizer_system.txt  content_generator_human_initial.txt  content_generator_human_revision.txt  content_generator_system.txt  content_reviser_system.txt  formatter_human.txt  formatter_system.txt  image_description_enricher_human.txt  image_description_enricher_system.txt  intro_ab_tester_human.txt  intro_ab_tester_system.txt  prompt_analyst_human.txt  prompt_analyst_system.txt  publication_matcher_human.txt  publication_matcher_system.txt  quality_analyzer_human.txt  quality_analyzer_system.txt  series_coherence_checker_human.txt  series_coherence_checker_system.txt  series_planner_human.txt  series_planner_system.txt  title_optimizer_human.txt  title_optimizer_system.txt  topic_refiner_human.txt  topic_refiner_system.txt
backend/scripts/: analyze_quality_snapshots.py  promote_latest_post.py  run_ci.py  run_improvement_loop.py
backend/tests/: conftest.py  test_ai_slop_detector.py  test_analytics.py  test_analyze_quality_snapshots.py  test_close_optimizer.py  test_content_generator_paragraphs.py  test_copy_editor_node.py  test_engagement_optimizer_node.py  test_evidence_brief.py  test_fact_check_revision_loop.py  test_fact_checker.py  test_finalize_exemplar.py  test_formatter.py  test_formatter_series_claim_prompts.py  test_generated_post_schema.py  test_generator_reviser_prompts.py  test_human_templates.py  test_human_voice_scorer.py  test_hyperlink_persistence.py  test_image_description_enricher.py  test_improve_endpoint.py  test_intro_ab_tester.py  test_line_editor_node.py  test_llm_factory.py  test_orchestrator_paragraph_guard.py  test_pipeline_request.py  test_post_model.py  test_post_processor.py  test_prompt_analyst.py  test_prompt_improvements.py  test_prompt_loader.py  test_prompt_refinements.py  test_publication_matcher.py  test_publication_recommendation.py  test_quality_analysis_node.py  test_quality_analyzer_filter.py  test_quality_analyzer_prompt_content.py  test_quality_snapshot.py  test_readability_scorer_node.py  test_repo_analysis_node.py  (+23 more)
(+128 files in other folders)
