[project]
name = "medium-agent-factory"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "slowapi>=0.1.9",
    "uvicorn[standard]>=0.32.0",
    "motor>=3.6.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langgraph>=0.2.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "tenacity>=8.3.0",
    "tavily-python>=0.5.0",
    "textstat>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.3.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pymongo>=4.10.0",
    "bandit>=1.7.0",
    "pip-audit>=2.7.0",
]

[tool.setuptools.packages.find]
include = ["app*"]   # evals/ is tests-only, not a distributable package

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"evals/*" = ["E501"]  # eval datasets contain intentionally long inline content strings

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
testpaths = ["tests", "evals"]
markers = [
    "eval_deep: slow LLM-as-judge tests — run nightly, not on every PR",
    "e2e: backend end-to-end tests — require a real MongoDB instance",
]
